src/test/ui/nll/closure-requirements/propagate-fail-to-approximate-longer-wrong-bounds.stderr
note: no external requirements
  --> $DIR/propagate-fail-to-approximate-longer-wrong-bounds.rs:39:47
   |
LL |     establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply::{closure#0} with closure substs [
               i16,
               for<'a^0, 'b^1, 'c^2, 'd^3, 'e^4, 'f^5> extern "rust-call" fn((&'a^0 std::cell::Cell<&'b^1 &'_#1r u32>, &'c^2 std::cell::Cell<&'d^3 &'_#2r u32>, &'e^4 std::cell::Cell<&'b^1 u32>, &'f^5 std::cell::Cell<&'d^3 u32>)),
               (),
           ]
   = note: late-bound region is '_#3r
   = note: late-bound region is '_#4r

error: lifetime may not live long enough
  --> $DIR/propagate-fail-to-approximate-longer-wrong-bounds.rs:41:9
   |
LL |     establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
   |                                                ----------  ---------- has type `&'_#8r Cell<&'2 &'_#2r u32>`
   |                                                |
   |                                                has type `&'_#6r Cell<&'1 &'_#1r u32>`
LL |         // Only works if 'x: 'y:
LL |         demand_y(x, y, x.get())
   |         ^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'1` must outlive `'2`

note: no external requirements
  --> $DIR/propagate-fail-to-approximate-longer-wrong-bounds.rs:38:1
   |
LL | fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: defining type: supply

error: aborting due to previous error

